# cs-g518-iot

./: .gitignore  LICENSE  MANIFEST.in  README.md  clean.sh  docs.build.sh  fastentrypoints.py  introduction.md  isort.sh  jsdoc.json  jsdoc.sh  mkdocs.sh  mkdocs.yml  npm-alias.sh  npm-publish.sh  pre-commit.sh  projects.md  publish-pypi.sh  setup.cfg  setup.py  setuputils.py
apps/basics/: package.json  web_server-hello-1.js
apps/lab/: 002_single_led.py  003_multiple_led.py
apps/mqtt/: README.md  mqtt_publish_temp.py  mqtt_subscribe_temp.py
apps/simple-coap-server/: client_put.py  simple-coap-server.md  simple-coap-server.service
docs/: 2022-09-22-getting-started-with-raspberry-pi.md  CNAME  _config.yml  changelist.md  cli.md  code_of_conduct.md  development.md  index.md  installation.md  introduction.md  references.md  release-0.0.1.md  roadmap.md  specifications.md  testing-with-tox.md  testing.md  unit-testing.md
docs/_posts/: 2022-09-22-getting-started-with-raspberry-pi.md  2022-09-23-raspberry-pi-gpio-spec.md  2022-09-24-raspberry-pi-dht11-humidity-sensor.md  2022-09-25-raspberry-pi-wifi-wpa-connection.md  (+2 more)
requirements/: mkdocs.txt
scripts/: codehub.setup.sh  cs-g518-iot.clone.sh  git-commit.stats.sh  install.sh  pinout.sh  python.check.sh  raspi-config.sh  shivamlahoria.sh
snippets/: mqtt.mosquitto.sh  mqtt.pub.sh  mqtt.sub.sh  mqtt_sub_1.py  rpi.mqtt.md  rpi.setup.md
src/: 004_touch_sensor.py  006_ldr.py  dht11.py  index.js  sensorconfig.py  ultrasonic.py  web_server_opencv.js  web_server_stream.js  ws_client.js  ws_server.js  ws_server_opencv.js
(+69 files in other folders)
