[metadata]
name = csg518iot
description = 'Pragmatic IoT CS G518.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skillplot/cs-g518-iot.git
author = 'mangalbhaskar'
maintainer = 'mangalbhaskar'
license = BSD 3-Clause
license_file = LICENSE
platforms = unix,linux
classifiers =
    'Development Status :: 3 - Alpha'      Chose either '3 - Alpha', '4 - Beta' or '5 - Production/Stable' as the current state of your package
    'Environment :: Console'
    'Intended Audience :: Developers'
    'License :: OSI Approved :: BSD 3-Clause License'
    'Operating System :: POSIX :: Linux'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Topic :: Software Development :: Pragmatic IoT'
    License :: OSI Approved :: Apache Software License
description_file = README.md
keywords =
    'IoT'
    'RasphberryPi'
    'Internet of things'
    'cloud'
    'mobile'
    'edge devices'
project_urls =
    Documentation=https://github.com/skillplot/cs-g518-iot.git
    Source=https://github.com/skillplot/cs-g518-iot.git
    Tracker=''

[options]
python_requires = ~=3.6
include_package_data = True

[options.package_data]
* = *.yml, *.csv, *.json

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests
